<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101010"
    tools:context=".userprofile">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="169dp"
        android:layout_height="126dp"
        android:text="User Profile"
        android:textColor="#F8F4F4"
        android:textColorLink="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="154dp"
        android:layout_height="31dp"
        android:text="Your History"
        android:textColor="#F6F2F2"
        android:textColorLink="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="103dp"
        app:circularflow_radiusInDP="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071"
        app:srcCompat="@drawable/istockphoto_1300845620_612x612" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="303dp"
        android:layout_height="193dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="5dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/nameview"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:visibility="visible">

            <Button
                android:id="@+id/jkh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#0097A7"
                android:onClick="onButtonClick"
                android:text="Workout plans"
                android:textColor="#FFFFFF"
                android:textColorLink="#000000"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/bpl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#0097A7"
                android:onClick="onButtonClick"
                android:text="Diet plans"
                android:textColor="#FFFFFF"
                android:textColorLink="#000000"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/HHP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#0097A7"
                android:onClick="onButtonClick"
                android:text="workout Hours"
                android:textColor="#FFFFFF"
                android:textColorLink="#000000"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/rtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#0097A7"
                android:onClick="onButtonClick"
                android:text="Suppliments"
                android:textColor="#FFFFFF"
                android:textColorLink="#000000"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/mas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#0097A7"
                android:onClick="onButtonClick"

                android:text="Daily Progress"
                android:textColor="#FFFFFF"
                android:textColorLink="#000000"
                app:cornerRadius="12dp"
                tools:backgroundTint="#0097A7" />

            <Button
                android:id="@+id/pbp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#0097A7"
                android:onClick="onButtonClick"

                android:text="Contact Details"
                android:textColor="#FFFFFF"
                android:textColorLink="#000000"
                app:cornerRadius="12dp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/nameview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="USERNAME  :"
        android:textColor="#F2EFEF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#F0ECEC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toEndOf="@+id/nameview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/mailview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="AGE                 :"
        android:textColor="#F2F0F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="#F2EEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toEndOf="@+id/mailview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <TextView
        android:id="@+id/telview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender             :"
        android:textColor="#F2EEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <TextView
        android:id="@+id/tele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="#F2F0F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toEndOf="@+id/telview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />


    <TextView
        android:id="@+id/addview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADDRESS       : "

        android:textColor="#F2F0F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="#F2F1F1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toEndOf="@+id/addview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:backgroundTint="#388E3C"
        android:onClick="onButtonClick"
        android:text="Edit profile"
        android:textColor="#FFFFFF"
        android:textColorLink="#FDFDFD"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:backgroundTint="#C2185B"
        android:onClick="onButtonClick"
        android:text="Delete"
        android:textColor="#FFFFFF"
        android:textColorLink="#FDFDFD"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toEndOf="@+id/editButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913"
        tools:ignore="HardcodedText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CITY                  :"
        android:textColor="#F8F6F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textColor="#F6F2F2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0097A7"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />


</androidx.constraintlayout.widget.ConstraintLayout>